2003-06-12  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
        
        * es.po: Updated Spanish translation.

2003-06-12  Jordi Mallach  <jordi@sindominio.net>

	* ca.po: Updated Catalan translation.

2003-06-12  Abel Cheung  <maddog@linux.org.hk>

	* zh_TW.po: Updated traditional Chinese translation.

2003-06-11  Abel Cheung  <maddog@linux.org.hk>

	* POTFILES.in: data/GNOME_Gedit.server.in -> .in.in

2003-06-04  Abel Cheung  <maddog@linux.org.hk>

	* ta.po: Fix broken encoding.

2003-06-04  Abel Cheung  <maddog@linux.org.hk>

	* zh_TW.po: Updated traditional Chinese translation.

2003-06-04  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-06-04  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-06-04  Jordi Mallach  <jordi@sindominio.net>

	* ca.po: Updated Catalan translation.

2003-06-03  Paolo Maggi <paolo.maggi@polito.it>

	* POTFILE.in: re-added indent, sort, shell_output and taglist 
	plugins

2003-05-31 Dafydd Harries <daf@parnssus.ath.cx>

	* cy.po: New translations, corrections.

2003-05-30  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* cy.po: updated Welsh translations from 
	Dafydd Harries <daf@parnassus.ath.cx>

2003-05-29  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
 
        * pt_BR.po: Updated Brazilian Portuguese translation
        from David Barzilay <barzilay@redhat.com>.

2003-05-29  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-05-28  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* nl.po: Dutch translation updated by Reinout van Schouwen.

2003-05-28  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* cy.po: Missing accents restored ('copio' to 'copïo) 

2003-05-27  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-05-27  Abel Cheung  <maddog@linux.org.hk>

	* POTFILES.in: Added gedit/gedit-encodings-option-menu.c

2003-05-26  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
        