@@ -11,6 +11,7 @@ gedit/dialogs/gedit-dialog-replace.c
 gedit/dialogs/gedit-dialog-uri.c
 gedit/dialogs/gedit-encodings-dialog.c
 gedit/dialogs/gedit-encodings-dialog.glade2
+gedit/dialogs/gedit-page-setup-dialog.c
 gedit/dialogs/gedit-plugin-manager.c
 gedit/dialogs/gedit-plugin-program-location-dialog.c
 gedit/dialogs/gedit-preferences-dialog.c
@@ -18,6 +19,7 @@ gedit/dialogs/gedit-preferences.glade2
 gedit/dialogs/gnome-print-font-dialog.c
 gedit/dialogs/gnome-print-font-picker.c
 gedit/dialogs/goto-line.glade2
+gedit/dialogs/page-setup-dialog.glade2
 gedit/dialogs/plugin-manager.glade2
 gedit/dialogs/program-location-dialog.glade2
 gedit/dialogs/replace.glade2
@@ -46,8 +48,16 @@ gedit/recent-files/egg-recent-view-bonobo.c
 plugins/docinfo/docinfo.c
 plugins/docinfo/docinfo.gedit-plugin.desktop.in
 plugins/docinfo/docinfo.glade2
+plugins/indent/indent.c
+plugins/indent/indent.gedit-plugin.desktop.in
 plugins/sample/sample.c
 plugins/sample/sample.gedit-plugin.desktop.in
+plugins/shell_output/shell_output.c
+plugins/shell_output/shell_output.gedit-plugin.desktop.in
+plugins/shell_output/shell_output.glade2
+plugins/sort/sort.c
+plugins/sort/sort.gedit-plugin.desktop.in
+plugins/sort/sort.glade2
 plugins/spell/gedit-automatic-spell-checker.c
 plugins/spell/gedit-spell-checker-dialog.c
 plugins/spell/gedit-spell-checker.c
@@ -56,21 +66,13 @@ plugins/spell/languages-dialog.glade2
 plugins/spell/spell-checker.glade2
 plugins/spell/spell.c
 plugins/spell/spell.gedit-plugin.desktop.in
-plugins/time/time.c
-plugins/time/time.gedit-plugin.desktop.in
-plugins/time/time.glade2
-plugins/shell_output/shell_output.c
-plugins/shell_output/shell_output.glade2
-plugins/shell_output/shell_output.gedit-plugin.desktop.in
 plugins/taglist/gedit-taglist-plugin-parser.c
 plugins/taglist/gedit-taglist-plugin-window.c
 plugins/taglist/gedit-taglist-plugin.c
 plugins/taglist/taglist.gedit-plugin.desktop.in
-plugins/indent/indent.c
-plugins/indent/indent.gedit-plugin.desktop.in
-plugins/sort/sort.glade2
-plugins/sort/sort.gedit-plugin.desktop.in
-plugins/sort/sort.c
+plugins/time/time.c
+plugins/time/time.gedit-plugin.desktop.in
+plugins/time/time.glade2
 viewer/gedit-factory.c
 viewer/gedit-persist-stream.c
 viewer/gedit-viewer-ui.xml
