@@ -1,3 +1,8 @@
+2003-06-13  Abel Cheung  <maddog@linux.org.hk>
+
+	* POTFILES.in: Added gedit/dialogs/gedit-page-setup-dialog.c,
+	  gedit/dialogs/page-setup-dialog.glade2.
+
 2003-06-12  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
         
         * es.po: Updated Spanish translation.
